# HF

./: .gitignore  .gitmodules  README.md  compile_commands.json  env.yml
cpp/: .ccls  CMakeLists.txt  build.sh  compile_commands.json  env.yml  example.sh  hf  magma-config.cmake  make.inc  timing.sh
cpp/.cache/clangd/index/: helper.cpp.559E8C74328F3E9D.idx  helper.hpp.9A09D495F929EB1C.idx  helper.hpp.B92B83E7FDBF97FA.idx  hf.cpp.5932EF8FCCEB0E31.idx  hf.cpp.C874D7AFF73F4C4B.idx  input.cpp.1DAE4239678ABD46.idx  input.cpp.B7C5591C820264A2.idx  input.hpp.49EC5232DFB1925E.idx  input.hpp.EA68A7E2A6B69CE5.idx
cpp/data/example1/: S.csv  T.csv  geom.xyz
cpp/data/t0/: geom.xyz  t1.xyz
cpp/data/t1/: S.csv  T.csv  V.csv  geom.xyz
cpp/data/t2/: S.csv  V.csv
cpp/data/t3/: V.csv  geom.xyz
cpp/include/: CMakeLists.txt  helper.hpp  input.hpp
cpp/old_build/: CMakeCache.txt
cpp/outputs/: t1.out  t3.out
cpp/plots/: main.py
cpp/report/: h.md
cpp/src/: CMakeLists.txt  helper.cpp  hf.cpp  hf_data.cpp  input.cpp
psi4/: main.py  t.in
psi4/t1/: S.csv  T.csv  V.csv
psi4/t2/: S.csv  T.csv
python3/: .ccls  main.py  t  test.sh
